# itk-napari-conversion

./: .gitignore  README.md  itk_napari_conversion.py  pyproject.toml  test.py  tests.py
.github/workflows/: test_and_deploy.yml
