[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "itk_napari_conversion"
author = "Matt McCormick"
author-email = "matt.mccormick@kitware.com"
home-page = "https://github.com/InsightSoftwareConsortium/itk-napari-conversion"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
description-file="README.md"

requires = [
    "itk-core >=5.2.0",
    "napari",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
]
