[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itk_napari_conversion"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
description = "Convert between itk and napari data structures"
readme = "README.md"
authors = [
    { name = "Matt McCormick", email = "matt@fideus.io" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "itk-core >=5.2.0",
    "napari",
]
optional-dependencies = { test = ["pytest"] }

[project.urls]
Homepage = "https://github.com/InsightSoftwareConsortium/itk-napari-conversion"

[tool.hatch.version]
path = "itk_napari_conversion.py"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyObject has no __module__ attribute",
    "ignore:builtin type SwigPyPacked has no __module__ attribute",
    "ignore:builtin type swigvarlink has no __module__ attribute",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
itk_napari_conversion = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest tests.py"

[tool.pixi.dependencies]
pytest = ">=8.4.2,<9"

[tool.pixi.environments]
default = { solve-group = "default" }
